--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,10 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.w3.org/MarkUp/SCHEMA/xhtml11.xsd">
 	<head>
 		<title>PostgreSQL Cloud Synchronization</title>
+		<script type="text/javascript" src="/static/jquery-1.3.2.js"></script>
+		<script type="text/javascript" src="/static/ui.js"></script>
 	</head>
 	<body>
+		<div id="content"/>
 	</body>
 </html>
