--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.w3.org/MarkUp/SCHEMA/xhtml11.xsd">
 	<head>
-		<title>PostgreSQL Cloud Synchronization</title>
+		<title>PostgreSQL Cloud Synchronizer</title>
+		<link rel="stylesheet" href="/static/ui.css"/>
 		<script type="text/javascript" src="/static/jquery-1.3.2.js"></script>
 		<script type="text/javascript" src="/static/ui.js"></script>
 	</head>
