--- a/static/ui.html
+++ b/static/ui.html
@@ -8,6 +8,7 @@
 		<script type="text/javascript" src="/static/ui.js"></script>
 	</head>
 	<body>
-		<div id="content"/>
+		<div id="loading"><blink>LOADING</blink></div>
+		<div id="content"></div>
 	</body>
 </html>
